<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omunguia.misdatos.DetalleContacto">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/llNombre"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OMAR MUNGUIA RIVERA"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFecha"
        android:layout_below="@+id/llNombre"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_fecha_nacimiento"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12-Abril-2016"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTelefono"
        android:layout_below="@+id/llFecha"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_telefono"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="222 400 4804"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_below="@+id/llTelefono"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="omar-munguia@outlook.com"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDireccion"
        android:layout_below="@+id/llEmail"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_direccion"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRIVADA ARTICULO 130 NO. 2420-1, COLONIA ALSESECA, PUEBLA, PUEBLA, MEXICO."/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_below="@+id/llDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar"
        android:onClick="onClickEditarDatos"
        />

</RelativeLayout>
